Fix bugs on PE condition & optdict_to_str

--- a/config/task/align_star.yml
+++ b/config/task/align_star.yml
@@ -2,7 +2,7 @@
 --readNameSeparator: "'|'"
 --limitBAMsortRAM: 48000000000
 --outReadsUnmapped: Fastx
---outSAMtype: "'BAM: SortedByCoordinate'"
+--outSAMtype: "BAM SortedByCoordinate"
 --quantMode: TranscriptomeSAM
 --outSAMattributes: All
 --outSAMstrandField: intronMotif
