--- a/config/task/align_star.yml
+++ b/config/task/align_star.yml
@@ -20,5 +20,7 @@
 --winAnchorMultimapNmax: 50
 --alignSJDBoverhangMin: 3
 --outFilterType: BySJout
+--twopassMode: Basic
+--outSAMunmapped: Within
 --runThreadN: 4
 --runRNGseed: 777
