--- a/config/assets_ercc.yml
+++ b/config/assets_ercc.yml
@@ -7,3 +7,19 @@ grch38:
     --kallisto-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/kallisto/gencode.v31.transcripts.formatted.ercc
     --rsem-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/rsem/gencode.v31.transcripts.formatted.ercc
     --ebseq-ngvector: ${MH_APP_SHARED}/assets/references/grch38/indexes/ebseq/gencode.v31.transcripts.formatted.ercc.ngvec
+  gencode_basic:
+    --gtf: ${MH_APP_SHARED}/assets/references/grch38/annotations/gencode/gencode.v31.basic.annotation.ercc.gtf
+    --tophat2-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/bowtie2/GRCh38.primary_assembly.genome.ercc
+    --hisat2-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/hisat2/GRCh38.primary_assembly.genome.ercc.gencode.v31.basic.annotation.ercc
+    --star-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/star/GRCh38.primary_assembly.genome.ercc.gencode.v31.basic.annotation.ercc
+    --kallisto-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/kallisto/gencode.v31.basic.transcripts.formatted.ercc
+    --rsem-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/rsem/gencode.v31.basic.transcripts.formatted.ercc
+    --ebseq-ngvector: ${MH_APP_SHARED}/assets/references/grch38/indexes/ebseq/gencode.v31.basic.transcripts.formatted.ercc.ngvec
+  gencode_refseq:
+    --gtf: ${MH_APP_SHARED}/assets/references/grch38/annotations/gencode_refseq/gencode.v31_refseq.v109.20190607.ercc.gtf
+    --tophat2-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/bowtie2/GRCh38.primary_assembly.genome.ercc
+    --hisat2-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/hisat2/GRCh38.primary_assembly.genome.ercc.gencode.v31_refseq.v109.20190607.ercc
+    --star-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/star/GRCh38.primary_assembly.genome.ercc.gencode.v31_refseq.v109.20190607.ercc
+    --kallisto-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/kallisto/gencode.v31_refseq.v109.20190607.transcripts.formatted.ercc
+    --rsem-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/rsem/gencode.v31_refseq.v109.20190607.transcripts.formatted.ercc
+    --ebseq-ngvector: ${MH_APP_SHARED}/assets/references/grch38/indexes/ebseq/gencode.v31_refseq.v109.20190607.transcripts.formatted.ercc.ngvec
