Fix edgeR parameter

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -7,6 +7,7 @@ grch38:
     --kallisto-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/kallisto/gencode.v31.transcripts.formatted
     --rsem-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/rsem/gencode.v31.transcripts.formatted
     --ebseq-ngvector: ${MH_APP_SHARED}/assets/references/grch38/indexes/ebseq/gencode.v31.transcripts.formatted.ngvec
+    --salmon-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/salmon/gencode.v31.transcripts.formatted
   gencode_basic:
     --gtf: ${MH_APP_SHARED}/assets/references/grch38/annotations/gencode/gencode.v31.basic.annotation.gtf
     --tophat2-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/bowtie2/GRCh38.primary_assembly.genome
@@ -15,6 +16,7 @@ grch38:
     --kallisto-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/kallisto/gencode.v31.basic.transcripts.formatted
     --rsem-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/rsem/gencode.v31.basic.transcripts.formatted
     --ebseq-ngvector: ${MH_APP_SHARED}/assets/references/grch38/indexes/ebseq/gencode.v31.basic.transcripts.formatted.ngvec
+    --salmon-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/salmon/gencode.v31.transcripts.formatted
   gencode_refseq:
     --gtf: ${MH_APP_SHARED}/assets/references/grch38/annotations/gencode_refseq/gencode.v31_refseq.v109.20190607.gtf
     --tophat2-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/bowtie2/GRCh38.primary_assembly.genome
@@ -23,3 +25,4 @@ grch38:
     --kallisto-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/kallisto/gencode.v31_refseq.v109.20190607.transcripts.formatted
     --rsem-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/rsem/gencode.v31_refseq.v109.20190607.transcripts.formatted
     --ebseq-ngvector: ${MH_APP_SHARED}/assets/references/grch38/indexes/ebseq/gencode.v31_refseq.v109.20190607.transcripts.formatted.ngvec
+    --salmon-index: ${MH_APP_SHARED}/assets/references/grch38/indexes/salmon/gencode.v31.transcripts.formatted
